# daric-sdk

./: .clang-format  .gitignore  DCO.md  LICENSE  LICENSE-3RD-PARTY.txt  README.md
.github/workflows/: build-gcc.yml  build-mdk.yml  clang-format.yml
bsp/: CMakeLists.txt
bsp/Components/AW2023/: aw2023.c  aw2023.h  aw2023_reg.h  aw_type.h
bsp/Components/AWHapticNv/: aw8623x.c  aw8624x.c  aw862x.c  aw862xx.c  haptic_nv.c  haptic_nv.h  haptic_nv_config.c  haptic_nv_params.c
bsp/Components/CST9220/: cst92xx_fw.h  hyn_cfg.h  hyn_core.h  hyn_cst92xx.c  hyn_i2c.c  hyn_ts_ext.c
bsp/Components/Common/: Touch_common.c  Touch_common.h  bsp_common.h  bsp_port.h  lcd_array_data.c  lcd_array_data.h  lcd_common.c  lcd_common.h  lcd_panel_cfg.h  rgb_led.h
bsp/Components/INS5T8900/: rtc_ins5t8900.c  rtc_ins5t8900.h
bsp/Components/LCD-ED028TC1/: ED028TC1U2_bin_23temp.h  lcd_ed028tc1_spi.c  lcd_ed028tc1_spi.h
bsp/Components/NFC_2/: CMakeLists.txt
bsp/Components/NFC_2/lib_nfc/: firmware.c  firmware.h  firmware_update.c  firmware_update.h  nci.c  nci.h  ndef_api.c  ndef_api.h  ndef_utils.c  ndef_utils.h  nfc_config.h  nfc_drv.c  nfc_drv.h  nfc_i2c.c  nfc_i2c.h  nfc_stage.c  nfc_stage.h  nfc_timer.c  nfc_timer.h  nfc_type.h  tags_defs.h  trace.c  trace.h
bsp/Components/NFC_2/port/: port.h  port_hardware.c  port_hardware.h  port_os.c  port_os.h  test_hce_mode.c  test_hce_mode.h
bsp/Components/NFC_2/port/include/: port_firmware_old.h
bsp/Components/NFC_2/se/port/: port_spi_ese.c  port_spi_ese.h
bsp/Components/NFC_2/se/src/api/: comm.c  comm.h
bsp/Components/NFC_2/se/src/ial/: ial_spi_ese.h
bsp/Components/NFC_2/se/src/proto/: peripheral.h  proto_spi_ese.c  proto_spi_ese.h
bsp/Components/NFC_2/se/src/util/: config.h  error.h  log.h
bsp/Components/SSD1680/: lcd_ssd1680_spi.c
bsp/Components/SSD1685/: lcd_ssd1685_spi.c
bsp/Components/TG28/: tg28.c  tg28.h
bsp/Components/mlb/: mlb_cfg.h  mlb_error_code.h  mlb_extend_intf.c  mlb_intf.h  mlb_platform.c  mlb_platform.h  mlb_test.c
bsp/Daric-EVB-NTO/: CMakeLists.txt  board.cmake  daric_evb_nto_battery_charge.c  daric_evb_nto_battery_charge.h  daric_evb_nto_lcm.c  daric_evb_nto_lcm.h  daric_evb_nto_rgb_led.c  daric_evb_nto_rgb_led.h  daric_evb_nto_ts.c  daric_evb_nto_ts.h  daric_evb_nto_usb.c  daric_evb_nto_usb.h  daric_evb_nto_vibrator.c  daric_evb_nto_vibrator.h  daric_fingerprint.c  daric_fingerprint.h  daric_pm.c  daric_pm.h  daric_pmu.c  daric_pmu.h
bsp/include/: daric_errno.h  daric_gsensor.h  daric_log.h
documents/software/sw_developing_guide/: Software_Development_Guide.md
documents/sphinx/: CMakeLists.txt  README.md  run-build
documents/sphinx/docs/: doxygen.rst  index.rst
drivers/: CMakeLists.txt
drivers/Inc/: daric_gpio.h  daric_hal.h  daric_hal_adc.h  daric_hal_ao.h  daric_hal_atimer.h  daric_hal_conf.h  daric_hal_def.h  daric_hal_flash.h  daric_hal_gpio.h  daric_hal_i2c.h  daric_hal_mdma.h  daric_hal_nvic.h  daric_hal_pinmap.h  daric_hal_pmu.h  daric_hal_pwm.h  daric_hal_reram.h  daric_hal_rtc.h  daric_hal_sd.h  daric_hal_sdio.h  daric_hal_spim.h  daric_hal_uart.h  daric_hal_udma_v3.h  daric_hal_usb.h  daric_hal_wdg.h  daric_ifram.h  daric_pulp_io.h  daric_uart.h  daric_udma.h  daric_udma_spim_v3.h  daric_udma_v3.h
drivers/Inc/arch/arm/: config_mpu_default.h  daric.h  daric_util.h  system_daric.h
drivers/Inc/sce/: aes.h  alu.h  auth.h  bn_util.h  fifo.h  hash.h  pke_curve.h  pke_rsa.h  sdma.h  trng.h
drivers/Src/: daric_hal.c  daric_hal_adc.c  daric_hal_ao.c  daric_hal_atimer.c  daric_hal_flash.c  daric_hal_gpio.c  daric_hal_i2c.c  daric_hal_mdma.c  daric_hal_nvic.c  daric_hal_pinmap.c  daric_hal_pmu.c  daric_hal_pwm.c  daric_hal_reram.c  daric_hal_rtc.c  daric_hal_sd.c  daric_hal_sdio.c  daric_hal_spim.c  daric_hal_uart.c  daric_hal_usb.c  daric_hal_wdg.c  daric_ifram.c  daric_udma.c
drivers/Src/arch/arm/: system_daric.c
drivers/Src/misc/: assert.c
drivers/Src/sce/: aes.c  alu.c  bn_util.c  hash.c  pke_curve.c  pke_rsa.c  sdma.c  trng.c
drivers/Tlsf/Inc/: daric_tlsf.h
drivers/Tlsf/Src/: daric_tlsf.c
middleware/crossbar/crypto/: CMakeLists.txt  ecdsa.c  ecdsa.h  eddsa.c  eddsa.h  hal_api.c  hal_api.h  ll_api.c  ll_api.h  paillier.c  paillier.h  rfc6979.c  rfc6979.h  schnorr.c  schnorr.h
middleware/crossbar/usb_device_library/: CMakeLists.txt
middleware/crossbar/usb_device_library/class/cdc/Inc/: usb_cdc.h  usb_cdc_acm.h
middleware/crossbar/usb_device_library/class/cdc/Src/: usb_cdc_acm.c
middleware/crossbar/usb_device_library/class/hid/Inc/: usb_hid.h  usb_hid_def.h
middleware/crossbar/usb_device_library/class/hid/Inc/Fidohid/: usb_hid.h
middleware/crossbar/usb_device_library/class/hid/Src/: usb_hid.c
middleware/crossbar/usb_device_library/class/hid/Src/Fidohid/: usb_hid.c
middleware/crossbar/usb_device_library/core/Inc/: usb_core.h  usb_def.h
middleware/crossbar/usb_device_library/core/Src/: usb_core.c
projects/evb_nto/bare_metal/aes_demo/: README.md
projects/evb_nto/bare_metal/aes_demo/GCC/scripts/cmake/: CMakeLists.txt
projects/evb_nto/bare_metal/alu_demo/: README.md
projects/evb_nto/bare_metal/ecdsa_demo/: README.md
projects/evb_nto/bare_metal/hash_demo/: README.md
projects/evb_nto/bare_metal/trng_demo/: README.md
projects/evb_nto/bare_metal/uart_demo/GCC/scripts/cmake/: CMakeLists.txt
projects/evb_nto/threadx_demo/: CMakeLists.txt  README.md
projects/evb_nto/threadx_demo/GCC/: README.md  project.cmake
projects/evb_nto/threadx_demo/GCC/ld/: daric_itcm.ld  daric_reram.ld  daric_reram_bloader.ld  daric_sram.ld
projects/evb_nto/threadx_demo/GCC/scripts/: build.sh
projects/evb_nto/threadx_demo/GCC/scripts/cmake/: CMakeLists.txt  CMakePresets.json  toolchain-arm-none-eabi.cmake
projects/evb_nto/threadx_demo/GCC/templates/: gdbinit-template  launch-template.json
projects/evb_nto/threadx_demo/Inc/: pinmap_config.h  sys_config.h
projects/evb_nto/threadx_demo/Src/: main.c  startup_daric.c
utilities/flash/: JLinkDevices.xml  daric_reram.FLM  flash_mdk.bat  jlink_flash_daric.sh
utilities/svd/: daric.svd
(+31 files in other folders)
